<resources>
    <string name="app_name">WPOSS Bank</string>

    <!-- String para el login -->
    <string name="str_loginemail">Ingrese su email</string>
    <string name="str_loginpassword">Ingrese su password</string>
    <string name="str_logingetin">Ingresar</string>

    <!-- String para el menu -->
    <string name="str_menucardpayment">Pagos con tarjeta</string>
    <string name="str_menuwithdrawal">Retiros</string>
    <string name="str_menudeposit">Depósitos</string>
    <string name="str_menutransfer">Transferencias</string>
    <string name="str_menucheckbalance">Consultas de saldo</string>
    <string name="str_menucreateaccount">Crear cuenta</string>
    <string name="str_menutransactionhistory">Historial de transacciones</string>
    <string name="str_menucorrespondentbalance">Visualizar saldo del corresponsal</string>
    <string name="str_menuexit">Salir</string>

    <!-- String para el pago con tarjeta -->
    <string name="str_cardpaymentcard">Numero de Tajera</string>
    <string name="str_cardpaymentdate">Fecha de vencimiento</string>
    <string name="str_cardpaymentcvv">CVV</string>
    <string name="str_cardpaymentname">Nombre del Titular</string>
    <string name="str_cardpaymentvalue">Valor a pagar</string>
    <string name="str_cardpaymentfees">Cuotas</string>
    <string name="str_cardpaymentpay">Pagar</string>
    <string name="str_cardpaymenwelcome">Bienvenida su tarjeta</string>


    <!-- String para el retiro -->
    <string name="str_withdrawalidentification">Numero de cedula</string>
    <string name="str_withdrawalpin">Pin de la cuenta</string>
    <string name="str_withdrawalrepeatpin">Confirme el pin</string>
    <string name="str_withdrawalamount">Monto a retirar</string>
    <string name="str_withdrawalbtn">Retirar</string>


    <!-- String para el deposio -->
    <string name="str_depositreceive">Cédula del cliente que recibe deposito</string>
    <string name="str_depositsend">Cédula del cliente que envía deposito</string>
    <string name="str_depositamount">Monto a depositar</string>
    <string name="str_depositbtn">Depositar</string>


    <!-- String para la transferencia -->
    <string name="str_transfersend">Cédula del cliente que envia transfiere</string>
    <string name="str_transferreceive">Cédula del cliente que recibe la transferencia</string>
    <string name="str_transferpin">Pin de la cuenta</string>
    <string name="str_transferpinrepeat">Confirmar pin de la cuenta</string>
    <string name="str_transferamount">Monto a transferir</string>
    <string name="str_transferbtn">Transferir</string>


    <!-- String para consultar saldo -->
    <string name="str_checkbalanceidentification">Número de cédula</string>
    <string name="str_checkbalancepin">Pin de la cuenta</string>
    <string name="str_checkbalancepinrepeat">Confirmar pin de la cuenta</string>
    <string name="str_checkbalancecheck">Consultar saldo</string>
    <string name="str_checkbalancebalance">Su saldo es </string>


    <!-- String para crear una cuenta -->
    <string name="str_createaccountname">Nombre del cliente</string>
    <string name="str_createaccountidentification">Número de cédula</string>
    <string name="str_createaccountpin">Pin de la cuenta</string>
    <string name="str_createaccountpinrepeat">Confirmar pin de la cuenta</string>
    <string name="str_createaccountbalance">Saldo inicial</string>
    <string name="str_createaccountbtn">Crear cuenta</string>


    <!-- String para consultar saldo corresponsal -->
    <string name="str_correspondentbalanceemail">Correo electrónico</string>
    <string name="str_correspondentbalancepassword">Nueva contraseña</string>
    <string name="str_correspondentbalancepasswordrepeat">Confirmar nueva contraseña</string>
    <string name="str_correspondentbalancebtn">Cambiar contraseña</string>
    <string name="str_correspondentbalancetext">Su saldo es</string>

    <!-- String para consultar saldo corresponsal -->
    <string name="str_dialogaccept">Aceptar</string>
    <string name="str_dialogcancel">Cancelar</string>
    <string name="str_dialogreturn">Volver</string>


    <!-- String para Historial de transacciones -->
    <string name="str_historydate">Fecha y hora de transacción</string>
    <string name="str_historytype">Tipo de transacción</string>
    <string name="str_historyammount">Monto de la transacción</string>
    <string name="str_historyidentification">Numero de la transacción</string>





</resources>