<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.menu">
    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menucardpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menucardpayment">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menuwithdrawal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menuwithdrawal">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menudeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menudeposit">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menutransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menutransfer">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menucheckbalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menucheckbalance">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menucreateaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menucreateaccount">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menutransactionhistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menutransactionhistory">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menucorrespondentbalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menucorrespondentbalance">

    </com.google.android.material.button.MaterialButton>



    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_menuexit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_menuexit">

    </com.google.android.material.button.MaterialButton>




</androidx.constraintlayout.widget.ConstraintLayout>